# vantage

./: .clang-format  .gitmodules  CMakeLists.txt  Info.plist  README.md  appveyor.yml
ext/: CMakeLists.txt
ext/fxc/: README.md
fonts/: fontSmall.h  fontSmall.spritefont  makeFontHeaders.bat
osx/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Main.storyboard  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  VantageView.h  VantageView.m  main.m
src/: main.cpp  resource.h  shaders.fx  vantage.cpp  vantage.h  vantage.rc  vantage_d3d.cpp  vantage_image.cpp  vantage_win.cpp  version.h
src/common/: glyph.h  mono.c  mono.h  mono.txt  txt_to_struct.coffee  vantage.c  vantage.h  version.h
src/osx/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Info.plist  Main.storyboard  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  VantageView.h  VantageView.m  buildNotes.txt  main.m
src/osx/package/: dmgbuildSettings.py  package.coffee
src/win32/: main.cpp  resource.h  shaders.fx  vantage.cpp  vantage.rc  vantage_d3d.cpp  version.h
